Todo:
- Pressing F1 should change ActiveColorIndex to color under the cursor.
- Palette editor should activate the SelectColor Tool in the background.
  This tool should select a color if left clicked on the drawarea and
  exit palette editor when right clicked on the drawarea.
- Create menu like in the original. (Not the same items.)
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.02.28
- New tool: PickColor (PICKCOL). When activated, click anywhere on the draw area
  to pick a color. That color is put on the MessageQueue in a MSG_PICKEDCOLOR message.
- Right clicking on ColorSelector invokes PICKCOL, and the picked color
  is put into the selected slot.
- The picked colors are saved in INI file.
- Middle click on ColorSelector to invoke PaletteEditor.
- The currently "picked" color slot is highlighted with VibroColors.

2023.02.27
- Undosystem now saves only region data instead of palette+region in region type
  undoitem. (It was correct in the file format text, only implementation was wrong.)
- New block type in filetypes (SystemState - S-block).
- System state (image current state, palette, undo state and CEL if exists) saved
  to state.bds.
- ColorSelector selects color only by left clicking on it.
- Removing some obsolete code and declarations here and there.
- Button appearance can be changed in INI file. (Settings/ModernGraphics)
- Right clicking on ColorSelector invokes PaletteEditor. Cannot go back, you have
  to quit (Q->Y).
- Palette Editor shows the first 256 colors, highlights the active color.

2023.02.26
- Undo/Redo buttons are disabled when nothing to undo/redo.
- BUGFix: Sometimes the render to texture failed to render. Especially when after
  changing zoom level the whole picture got outside of DrawArea.
- Message handling moved to TControls for messages needed to be handled by TControls.

2023.02.25
- UndoSystem state saved and loaded (temp.bdu).

2023.02.24
- File format changed.