@@ -54,7 +54,7 @@ Selected2=2
 Selected3=3
 Selected4=4
 Selected5=5
-Selected6=6
+Selected6=10
 Selected7=7
-ActiveColor=5
+ActiveColor=10
 
